src/objects/Child_Involved__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Children Involved</relationshipLabel>
        <relationshipName>Children_Involved</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Court_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Court Case</label>
        <referenceTo>Court_Case__c</referenceTo>
        <relationshipLabel>Children Involved</relationshipLabel>
        <relationshipName>Children_Involved</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VPO_Has_been_harassed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VPO - Has been harassed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPO_Has_been_harmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VPO - Has been harmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPO_Has_been_stalked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VPO - Has been stalked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPO_Has_been_threatened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VPO - Has been threatened</label>
        <type>Checkbox</type>
    </fields>
    <label>Child Involved</label>
    <nameField>
        <displayFormat>Involved Child - {000000}</displayFormat>
        <label>Involved Child ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Children Involved</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>